--- a/index.html
+++ b/index.html
@@ -124,6 +124,13 @@
         background-color: green;
     }
 
+    .box2:hover {
+        transform: skewX(50deg);
+        width: 300px;
+        height: 300px;
+        margin-left: 300px;
+    }
+
 
 </xmp>
 
